Fix on hover flickering share delete icon

--- a/css/app/calendarlist.css
+++ b/css/app/calendarlist.css
@@ -238,8 +238,8 @@
 	padding-right: 5px;
 }
 
-#app-navigation .app-navigation-list-item:hover .calendar-share-list .utils .action span {
-	padding: 0;
+#app-navigation .app-navigation-list-item .calendar-share-list .utils .action span {
+	padding: 0 6px;
 }
 
 #app-navigation .app-navigation-list-item:hover .utils.active {
